--- a/day04/PageTest.html
+++ b/day04/PageTest.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PageTest</title>
     <style>
+        .container{
+            width: 1200px;
+            border: 1px solid black;
+        }
         .navBar{
             background-color: aquamarine;
             padding: 10px;
@@ -26,19 +30,61 @@
         .navBar-item a:hover{
             background-color: #ddd;
         }
+        .RepImg{
+            background-image: url(https://cdn.pixabay.com/photo/2017/05/12/08/29/coffee-2306471_1280.jpg);
+            width: 1200px;
+            background-repeat: no-repeat;
+            background-size: cover;
+            height: 100vh;
+        }
+        .a0{
+            position: absolute;
+            text-align: left;
+            bottom: 275px;
+            left: 44px;
+            margin: 0;
+            font-size: 15px;
+            font-weight: 50;
+            color: white;
+        }
+        .a1{
+            position: absolute;
+            text-align: left;
+            bottom: 200px;
+            left: 40px;
+            margin: 0;
+            font-size: 30px;
+            font-weight: 600;
+            color: white;
+            text-shadow: 20px 30px 40px black;
+        }
     </style>
 </head>
 <body>
-    <nav class="navBar">
-        <ul class="navBar-nav">
-            <li class="navBar-item"><a href="PageTest.html"><img src="../images/GitHub-logo.png" alt="로고" width="40px"></a></li>
-            <li class="navBar-item"><a href="#">ABOUT</a></li>
-            <li class="navBar-item"><a href="#">CAFES</a></li>
-            <li class="navBar-item"><a href="#">MENU</a></li>
-            <li class="navBar-item"><a href="#">COMPANY</a></li>
-            <li class="navBar-item"><a href="#">NEWS</a></li>
-        </ul>
-    </nav>
-    
+    <div class="container">
+        <header>
+            <nav class="navBar">
+                <ul class="navBar-nav">
+                    <li class="navBar-item"><a href="PageTest.html"><img src="../images/GitHub-logo.png" alt="로고" width="40px"></a></li>
+                    <li class="navBar-item"><a href="#">ABOUT</a></li>
+                    <li class="navBar-item"><a href="#">CAFES</a></li>
+                    <li class="navBar-item"><a href="#">MENU</a></li>
+                    <li class="navBar-item"><a href="#">COMPANY</a></li>
+                    <li class="navBar-item"><a href="#">NEWS</a></li>
+                </ul>
+            </nav>
+        </header>
+        <section>
+            <div class="RepImg">
+                <p class="a0">WELCOME EVERYONE</p>
+                <p class="a1">블루보틀에 오신 것을 <br>
+                환영합니다.</p>
+            </div>
+
+        </section>
+        <footer>
+
+        </footer>
+    </div>
 </body>
 </html>
