--- a/day04/PageTest.html
+++ b/day04/PageTest.html
@@ -6,7 +6,7 @@
     <title>PageTest</title>
     <style>
         .container{
-            width: 1200px;
+            width: auto;
             border: 1px solid black;
         }
         .navBar{
@@ -32,7 +32,7 @@
         }
         .RepImg{
             background-image: url(https://cdn.pixabay.com/photo/2017/05/12/08/29/coffee-2306471_1280.jpg);
-            width: 1200px;
+            width: auto;
             background-repeat: no-repeat;
             background-size: cover;
             height: 100vh;
