[ADD]mainPage.html frame 추가

--- a/myPage/mainPage.html
+++ b/myPage/mainPage.html
@@ -6,6 +6,23 @@
     <title>mainPage</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+
+        </nav>
+    </header>
+    <main>
+        <section>
+            <div>
+
+            </div>
+            <div>
+
+            </div>
+        </section>
+    </main>
+    <footer>
+        
+    </footer>
 </body>
 </html>
