[MOD]파일 추가 및 수정(쓸모없음)

--- a/myPage/mainPage.html
+++ b/myPage/mainPage.html
@@ -49,11 +49,10 @@
                 
             </div>
             <ul class="navBar-nav">
-                <li class="navBar-item"><a href="../myPage/mainPage.html"><i class="fa-solid fa-bars"></i></a></li>
-                <li class="navBar-item"><a href="../myPage/mainPage.html">Home</a></li>
-                <li class="navBar-item"><a href="intro.html">Intro</a></li>
-                <li class="navBar-item"><a href="study.html">Study</a></li>
-                <li class="navBar-item"><a href="etc.html">etc</a></li>
+                <li class="navBar-item"><a href="../myPage/intro.html"><i class="fa-solid fa-bars"></i></a></li>
+                <li class="navBar-item"><a href="../myPage/intro.html">Home</a></li>
+                <li class="navBar-item"><a href="../myPage/">Study</a></li>
+                <li class="navBar-item"><a href="../myPage/">etc</a></li>
             </ul>
         </nav>
     </header>
