--- a/myPage_ver_2/index.html
+++ b/myPage_ver_2/index.html
@@ -20,7 +20,7 @@
         <div class = "index">
           <!-- 프로필 이미지 -->
           <div class = "img">
-            <img id="porfile-img" src ="images/mimoticon.jpeg">
+            <img id="porfile-img" src ="images/mainProfile.jpg">
           </div>
           <br>
           <!-- 목차 내용 -->
@@ -34,28 +34,27 @@
       <section class="about">
         <!-- 이름 -->
         <header class="name">
-          <p><span>JENNY</span>&nbsp<span style="color: #2B3856;">YEJEE CHO</span></p>
+          <p><span>KEVIN</span>&nbsp<span style="color: #2B3856;">KYUNGHO CHUNG</span></p>
           <!-- 연락처 -->
           <div class="contacts">
-            <p>🎂1995.09.21</p>
-            <p>📞+(82)10-5120-6319</p>
-            <p>📧choyejee14@gmail.com</p>
+            <p>🎂2001.02.10</p>
+            <p>📞+(82)10-7579-2729</p>
+            <p>📧khchung30630@gmail.com</p>
           </div>
         </header>
         <br><br>
         <!-- 소개글 -->
         <article class="main-introduction">
-          <p>안녕하세요! 위코드 34기 조예지입니다.<br>
-          컴퓨터와는 전혀 관련 없는 분야에만 있다가 코딩에 흥미를 느껴 개발자라는 직업에 도전하게 되었습니다.</p>
+          <p>안녕하세요! 제 이름은 정경호입니다.<br>
+          백엔드 공부를 하던 중 스프링을 다뤄볼 수 있는 기회가 생겨 본 과정에 참여하게 되었습니다.</p>
           <br>
-          <p style="opacity: 1">앞으로 잘 부탁드리며, 저에 대해 더 알고싶으시다면 스크롤을 내려주세요!🙋‍♀️</p>
+          <p style="opacity: 1">앞으로 잘 부탁드리며, 저에 대해 더 알고싶으시다면 스크롤을 내려주세요!🙋🏻‍♂</p>
         </article>
         <br><br>
         <!-- SNS 픽토그램 -->
         <footer class="sns-pictogram">
-          <a href='https://instagram.com/dumibell?igshid=YmMyMTA2M2Y='><i class="fa-brands fa-instagram fa-4x"></i></a>
-          <!-- <a href="https://blog.naver.com/choyejee"><i class="fa-solid fa-blog fa-4x"></i></a> -->
-          <a href="https://github.com/Dumibell"><i class="fa-brands fa-github fa-4x"></i></a>
+          <a href='https://instagram.com/kxungxo'><i class="fa-brands fa-instagram fa-4x"></i></a>
+          <a href="https://github.com/KyunghoChung"><i class="fa-brands fa-github fa-4x"></i></a>
         </footer>
       </section>
 
