[ADD]커밋해도되겠지..

--- a/myPageVer02/about.html
+++ b/myPageVer02/about.html
@@ -18,27 +18,24 @@
             <ul>
                 <li><a href = "index.html"><b>Home</b></a></li>
                 <li><a href = "about.html"><b>About</b></a></li>
-                <li><a href = "favorites.html"><b>What I love</b></a></li>
+                <li><a href = "skill.html"><b>Skill</b></a></li>
                 <li><a href = "contact.html"><b>Contact</b></a></li>
             </ul>
         </nav>
     </header> 
     <div class="list">
       <div class ="two">
-          <img class = "me" src ="./imgs/me2.jpg" alt="" width="450px;" height="500px">
-          <h3 class ="intext"> <strong>What would I lose if I learn coding?<br>Absoultely nothing!</strong><br><br>
-            Hello! I'm Stella Kim. Welcome to my homepage.<br>
-            I majored in English and worked as a hotelier in Singapore. <br>
-            After I came back to Korea, I was also in the service fields. <br>
-            But I don't want to see myself in the same industry in the few years. <br>
-            The reason I want to be a fullstack engineer is that <br>
-            there is no limits for studying and developing myself! <br>
-            Achievement is one of my motivation of my life. <br><br>
-            To be a great developer, <br>
-            achievement and developing myself constantly <br>
-            is the most important thing, I think.
-            <br><br>
-            For the future junior developer!</h3>
+          <img class = "me" src ="./imgs/aboutPic.jpg" alt="" width="400px;" height="500px">
+          <h3 class ="intext"> <strong>먼저 저를 간단히 소개할게요 🤍</strong><br>
+            저는 한국공학대학교에서 컴퓨터공학과를 전공했습니다. <br>
+            나이는 만 22세이고, 현재 사는 곳은 경기도 김포시 입니다. <br>
+            저는 사람을 만나는 것, 여행을 떠나는 것, 술마시는 것을 좋아합니다. <br><br>
+            <strong>이번에는 제 목표를 간단히 설명할게요🤍</strong><br>
+            졸업을 앞두고 진로에 대한 고민이 많던 와중에 <br>
+            우연히 자바 풀스택 교육과정을 알게되어 참여했습니다. <br>
+            이번 과정을 통해 프론트엔드 백엔드에 구애 받지 않고 <br>
+            개발이 가능한 웹 개발자가 되는 것이 목표입니다 :) <br><br>
+            <strong>다른 내용이 궁금하다면 <br>상단 바에서 다른 메뉴를 선택해주세요!</strong></h3>
       </div>
   </div>
 </body>
