--- a/myPageVer02/contact.html
+++ b/myPageVer02/contact.html
@@ -24,10 +24,12 @@
     </header> 
     <div class="list">
         <div class = "four">
-            <img class = "contact_img" src ="./imgs/bg.jpg">
-            <a href="https://subtitle1.github.io/" class="ct">Blog</a>
-            <a href="mailto:stella.kim.96211@gmail.com" class="ct">Gmail</a>
-            <a href="https://github.com/subtitle1" class="ct">Github</a>
+            <img class = "contact_img" src ="./imgs/contactPic.jpg"><br>
+            <div class="forMargin">
+                <a href="https://www.instagram.com/kxungxo/" class="ct">Insta</a>
+                <a href="mailto:khchung30630@gmail.com" class="ct">Gmail</a>
+                <a href="https://github.com/KyunghoChung" class="ct">Github</a>
+            </div>
         </div>
     </div>
 </body>
