--- a/myPageVer02/about.html
+++ b/myPageVer02/about.html
@@ -18,7 +18,7 @@
             <ul>
                 <li><a href = "index.html"><b>Home</b></a></li>
                 <li><a href = "about.html"><b>About</b></a></li>
-                <li><a href = "skill.html"><b>Skill</b></a></li>
+                <li><a href = "favorites.html"><b>favorites</b></a></li>
                 <li><a href = "contact.html"><b>Contact</b></a></li>
             </ul>
         </nav>
