[MOD] 내용적인 면, 틀은 완성|| 디자인적 요소 다수 필요

--- a/myPageVer02/about.html
+++ b/myPageVer02/about.html
@@ -18,12 +18,12 @@
             <ul>
                 <li><a href = "index.html"><b>Home</b></a></li>
                 <li><a href = "about.html"><b>About</b></a></li>
-                <li><a href = "favorites.html"><b>favorites</b></a></li>
+                <li><a href = "favorites.html"><b>Favorites</b></a></li>
                 <li><a href = "contact.html"><b>Contact</b></a></li>
             </ul>
         </nav>
     </header> 
-    <div class="list">
+    <!-- <div class="list"> -->
       <div class ="two">
           <img class = "me" src ="./imgs/aboutPic.jpg" alt="" width="400px;" height="500px">
           <h3 class ="intext"> <strong>먼저 저를 간단히 소개할게요 🤍</strong><br>
@@ -37,5 +37,5 @@
             개발이 가능한 웹 개발자가 되는 것이 목표입니다 :) <br><br>
             <strong>다른 내용이 궁금하다면 <br>상단 바에서 다른 메뉴를 선택해주세요!</strong></h3>
       </div>
-  </div>
+  <!-- </div> -->
 </body>
