--- a/myPageVer02/favorites.html
+++ b/myPageVer02/favorites.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>What I love</title>
+    <title>favorites</title>
     <link rel = "stylesheet" href = "./css/main.css">
     <link rel = "stylesheet" href = "./css/favorites.css">
     <style>
@@ -17,33 +17,34 @@
             <ul>
                 <li><a href = "index.html"><b>Home</b></a></li>
                 <li><a href = "about.html"><b>About</b></a></li>
-                <li><a href = "favorites.html"><b>What I love</b></a></li>
+                <li><a href = "favorites.html"><b>Favorites</b></a></li>
                 <li><a href = "contact.html"><b>Contact</b></a></li>
             </ul>
         </nav>
     </header> 
     <div class="list">
         <div class="three">
+            <h3><strong>제가 좋아하는 것들을 조금 더 자세히 설명해드릴게요🤍</strong></h3>
             <div class = "favorites">
                 <div class="lists">
-                    <img class = "list_img" src="./imgs/what i love/mypet.jpg" alt="">
-                    <p class = "list_text"> 반려견 두부를 포함한<br>모든 강아지! 🐶</p>
+                    <img class = "list_img" src="./imgs/what i love/soju2.jpg" alt="">
+                    <p class = "list_text"> 모든 술을 좋아하지만 그 중에서 <br> 소주를 제일 좋아해요 💕</p>
                 </div>
   
                 <div class="lists">
-                    <img class = "list_img" src="./imgs/what i love/coffee.jpg" alt="">
-                    <p class = "list_text"> Coffee ☕</p>
+                    <img class = "list_img" src="./imgs/what i love/boracai.jpeg" alt="">
+                    <p class = "list_text"> 가장 기억에 남는 여행지는 <br> 보라카이 화이트비치에요 💕</p>
                 </div>
   
                 <div class="lists">
-                    <img class = "list_img" src="./imgs/what i love/walking.jpg" alt="">
-                    <p class = "list_text"> 산책도 즐기고 🏃🏻‍♂️</p>
+                    <img class = "list_img" src="./imgs/what i love/nonparty.jpg" alt="">
+                    <p class = "list_text"> 사람을 만날 때는 파티처럼 노는 것보다 <br> 도란도란 이야기를 나누는게 좋아요 💕</p>
                 </div>
   
-                <div class="lists">
+                <!-- <div class="lists">
                     <img class = "list_img" src="./imgs/what i love/traveling.jpg" alt="">
                     <p class = "list_text"> 여행도 좋아해요! 💕</p>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
