[ADD]skill(html,css)추가 & 전체 페이지 navBar 수정

--- a/myPageVer02/favorites.html
+++ b/myPageVer02/favorites.html
@@ -12,35 +12,35 @@
     </style>
 </head>
 <body>
-    <header id = "header"> 
-        <nav class ="menu">
+    <header id="header">
+        <nav class="menu">
             <ul>
-                <li><a href = "index.html"><b>Home</b></a></li>
-                <li><a href = "about.html"><b>About</b></a></li>
-                <li><a href = "favorites.html"><b>Favorites</b></a></li>
-                <li><a href = "contact.html"><b>Contact</b></a></li>
+                <li><a href="index.html"><b>Home</b></a></li>
+                <li><a href="about.html"><b>About</b></a></li>
+                <li><a href="favorites.html"><b>Favorites</b></a></li>
+                <li><a href="skill.html"><b>Skill</b></a></li>
+                <li><a href="contact.html"><b>Contact</b></a></li>
             </ul>
         </nav>
-    </header> 
+    </header>
     <div class="list">
         <div class="three">
             <h3><strong>제가 좋아하는 것들을 조금 더 자세히 설명해드릴게요🤍</strong></h3>
             <div class = "favorites">
                 <div class="lists">
                     <img class = "list_img" src="./imgs/what i love/soju2.jpg" alt="">
-                    <p class = "list_text"> 모든 술을 좋아하지만 그 중에서 <br> 소주를 제일 좋아해요 💕</p>
+                    <h5 class = "list_text"> 모든 술을 좋아하지만 그 중에서 <br> 소주를 제일 좋아해요 💕</h5>
                 </div>
   
                 <div class="lists">
                     <img class = "list_img" src="./imgs/what i love/boracai.jpeg" alt="">
-                    <p class = "list_text"> 가장 기억에 남는 여행지는 <br> 보라카이 화이트비치에요 💕</p>
+                    <h5 class = "list_text"> 가장 기억에 남는 여행지는 <br> 보라카이 화이트비치에요 💕</h5>
                 </div>
   
                 <div class="lists">
                     <img class = "list_img" src="./imgs/what i love/nonparty.jpg" alt="">
-                    <p class = "list_text"> 사람을 만날 때는 파티처럼 노는 것보다 <br> 도란도란 이야기를 나누는게 좋아요 💕</p>
+                    <h5 class = "list_text"> 사람을 만날 때는 파티처럼 노는 것보다 <br> 도란도란 이야기를 나누는게 좋아요 💕</h5>
                 </div>
-  
                 <!-- <div class="lists">
                     <img class = "list_img" src="./imgs/what i love/traveling.jpg" alt="">
                     <p class = "list_text"> 여행도 좋아해요! 💕</p>
