--- a/myPageVer02/about.html
+++ b/myPageVer02/about.html
@@ -12,21 +12,21 @@
     </style>
 </head>
 <div id="container">
-    
-    <header id = "header"> 
-        <nav class ="menu">
+    <header id="header">
+        <nav class="menu">
             <ul>
-                <li><a href = "index.html"><b>Home</b></a></li>
-                <li><a href = "about.html"><b>About</b></a></li>
-                <li><a href = "favorites.html"><b>Favorites</b></a></li>
-                <li><a href = "contact.html"><b>Contact</b></a></li>
+                <li><a href="index.html"><b>Home</b></a></li>
+                <li><a href="about.html"><b>About</b></a></li>
+                <li><a href="favorites.html"><b>Favorites</b></a></li>
+                <li><a href="skill.html"><b>Skill</b></a></li>
+                <li><a href="contact.html"><b>Contact</b></a></li>
             </ul>
         </nav>
     </header> 
     <!-- <div class="list"> -->
-      <div class ="two">
-          <img class = "me" src ="./imgs/aboutPic.jpg" alt="" width="400px;" height="500px">
-          <h3 class ="intext"> <strong>먼저 저를 간단히 소개할게요 🤍</strong><br>
+    <div class ="two">
+        <img class = "me" src ="./imgs/aboutPic.jpg" alt="" width="400px;" height="500px">
+        <h3 class ="intext"> <strong>먼저 저를 간단히 소개할게요 🤍</strong><br>
             저는 한국공학대학교에서 컴퓨터공학과를 전공했습니다. <br>
             나이는 만 22세이고, 현재 사는 곳은 경기도 김포시 입니다. <br>
             저는 사람을 만나는 것, 여행을 떠나는 것, 술마시는 것을 좋아합니다. <br><br>
@@ -36,6 +36,6 @@
             이번 과정을 통해 프론트엔드 백엔드에 구애 받지 않고 <br>
             개발이 가능한 웹 개발자가 되는 것이 목표입니다 :) <br><br>
             <strong>다른 내용이 궁금하다면 <br>상단 바에서 다른 메뉴를 선택해주세요!</strong></h3>
-      </div>
+    </div>
   <!-- </div> -->
 </body>
