--- a/myPageVer02/contact.html
+++ b/myPageVer02/contact.html
@@ -12,13 +12,14 @@
     </style>
 </head>
 <body>
-    <header id = "header"> 
-        <nav class ="menu">
+    <header id="header">
+        <nav class="menu">
             <ul>
-                <li><a href = "index.html"><b>Home</b></a></li>
-                <li><a href = "about.html"><b>About</b></a></li>
-                <li><a href = "favorites.html"><b>Favorites</b></a></li>
-                <li><a href = "contact.html"><b>Contact</b></a></li>
+                <li><a href="index.html"><b>Home</b></a></li>
+                <li><a href="about.html"><b>About</b></a></li>
+                <li><a href="favorites.html"><b>Favorites</b></a></li>
+                <li><a href="skill.html"><b>Skill</b></a></li>
+                <li><a href="contact.html"><b>Contact</b></a></li>
             </ul>
         </nav>
     </header> 
