--- a/myPageVer02/index.html
+++ b/myPageVer02/index.html
@@ -21,6 +21,7 @@
                 <li><a href="index.html"><b>Home</b></a></li>
                 <li><a href="about.html"><b>About</b></a></li>
                 <li><a href="favorites.html"><b>Favorites</b></a></li>
+                <li><a href="skill.html"><b>Skill</b></a></li>
                 <li><a href="contact.html"><b>Contact</b></a></li>
             </ul>
         </nav>
