[MOD]favorites&skill 호버 이미지 확대 추가

--- a/myPageVer02/skill.html
+++ b/myPageVer02/skill.html
@@ -23,24 +23,25 @@
             </ul>
         </nav>
     </header>
-    <h3><strong>지금까지 공부해봤던 것들을 간단하게 나열해볼게요.</strong></h3>
+    <h3><strong>지금까지 공부해봤던 것들을 간단하게 나열해볼게요. <br> 각각의 이미지를 클릭하면<br>제가 추천하는 영상 혹은 문서가 나와요🤍
+    </strong></h3>
     <div class="list">
         
         <div class="tool">
             <div class="toolList">
-                <img class="tool_img" src="imgs/Clang.png" alt="">
+                <a href="https://www.youtube.com/watch?v=q6fPjQAzll8"><img class="tool_img" src="imgs/Clang.png" alt=""></a>
                 <h5 class="tool_text">대학교에 처음 들어가서 배운 언어가<br>C언어를 통한 프로그래밍이었어요.</h5>
             </div>
             <div class="toolList">
-                <img class="tool_img" src="imgs/python.jpeg" alt="">
+                <a href="https://www.youtube.com/watch?v=KL1MIuBfWe0"><img class="tool_img" src="imgs/python.jpeg" alt=""></a>
                 <h5 class="tool_text">그 다음으로는 그 당시 가장 많이 쓰인 객체지향 언어인<br>Python을 공부했구요,</h5>
             </div>
             <div class="toolList">
-                <img class="tool_img" src="imgs/Java.png" alt="">
+                <a href="https://www.youtube.com/watch?v=NQq0dOoEPUM"><img class="tool_img" src="imgs/Java.png" alt=""></a>
                 <h5 class="tool_text">2학년 2학기에 전공 선택으로<br>자바를 통한 객체지향 프로그래밍을 공부했어요!</h5>
             </div>
             <div class="toolList">
-                <img class="tool_img" src="imgs/django.png" alt="">
+                <a href="https://docs.djangoproject.com/ko/4.2/"><img class="tool_img" src="imgs/django.png" alt=""></a>
                 <h5 class="tool_text">마지막으로는 졸업작품에서 백엔드를 맡아서<br>Django를 활용한 서버 구축을 공부했습니다🤍</h5>
             </div>
         </div>     
