[MOD]자기소개Ver02완성

--- a/myPageVer02/index.html
+++ b/myPageVer02/index.html
@@ -18,11 +18,11 @@
         <header id="header">
             <nav class="menu">
                 <ul>
-                    <li><a href="index.html"><b>Home</b></a></li>
-                    <li><a href="about.html"><b>About</b></a></li>
-                    <li><a href="favorites.html"><b>Favorites</b></a></li>
-                    <li><a href="skill.html"><b>Skill</b></a></li>
-                    <li><a href="contact.html"><b>Contact</b></a></li>
+                    <li class="hov"><a href="index.html"><b>Home</b></a></li>
+                    <li class="hov"><a href="about.html"><b>About</b></a></li>
+                    <li class="hov"><a href="favorites.html"><b>Favorites</b></a></li>
+                    <li class="hov"><a href="skill.html"><b>Skill</b></a></li>
+                    <li class="hov"><a href="contact.html"><b>Contact</b></a></li>
                 </ul>
             </nav>
         </header>
@@ -30,7 +30,7 @@
     <div class="list">
         
             <div class="one">
-                <span class="profile"><img src="./imgs/mainProfile.jpg" width="550px;" height="550px" alt=""/></span> 
+                <span class="profile"><img src="./imgs/mainProfile.jpg" width="450px;" height="450px" alt=""/></span> 
                 <h3><strong>Hello! I'm 정경호.</strong> <br>You can click the bar, if you want to see me more!</h3>
             </div>
     </div>
